--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="head">
               <div class="user">
                 <div class="profile-picture">
-                  <img src="/images/tamer1.jpeg" alt="" style="width: 165%;right: 6px;position: relative;">
+                  <img src="/images/tamer1.jpeg" alt="" style="width: 165%;">
                 </div>
                 <div class="info">
                   <h3>Tamer Hosny</h3>
